--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,9 +1,12 @@
+0.1.2 2016/12/19
+å¢åŠ åŠŸèƒ½ï¼šå¯¹å­—ç¬¦é›† utf8mb4çš„æ”¯æŒ
+
 0.1.1  2016/11/23
-Ôö¼Ó¹¦ÄÜ£ºÌá¹©Õë¶Ôupdate,delete,insert²Ù×÷ÀàĞÍµÄ¹ıÂË ( --skip_insert  --skip_update --skip_delete)
-Ôö¼Ó¹¦ÄÜ£º²úÉúµÄsql¿ÉÒÔÈ¥³ıschemaÃû³Æ( --add_schema_name) £¬ÕâÑùÓÃ»§¸üºÃµ÷ÊÔ
-ÆäËû£º¼Ó°æ±¾±êÊ¶
-ÆäËû£ºµ¥Ôª²âÊÔÅ²µ½testÄ¿Â¼ÏÂ
+å¢åŠ åŠŸèƒ½ï¼šæä¾›é’ˆå¯¹update,delete,insertæ“ä½œç±»å‹çš„è¿‡æ»¤ ( --skip_insert  --skip_update --skip_delete)
+å¢åŠ åŠŸèƒ½ï¼šäº§ç”Ÿçš„sqlå¯ä»¥å»é™¤schemaåç§°( --add_schema_name) ï¼Œè¿™æ ·ç”¨æˆ·æ›´å¥½è°ƒè¯•
+å…¶ä»–ï¼šåŠ ç‰ˆæœ¬æ ‡è¯†
+å…¶ä»–ï¼šå•å…ƒæµ‹è¯•æŒªåˆ°testç›®å½•ä¸‹
 
 0.1.0   2016/11/17
-³õÊ¼°æ±¾
+åˆå§‹ç‰ˆæœ¬
 
